<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_register">Register</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="start">Start</string>
    <string name="bookmark">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="sets">Sets</string>
    <string name="tt">Lorem iphtsr ycjsekyu ytckf ydjtfkfrx xteses yrdts rsgxc txesujk urdrdrs itfikvytd rjdf ffg apfuhgndf fh dfvhaufbvvdfv</string>
    <string name="t2">Lorem iphtsr ycjsekyu ytckf ydjtfkfrx xteses yrdts rsgxc</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="show_score">Show Score</string>
    <string name="score">Score</string>
    <string name="done">Done</string>
    <string name="out_of_0">Out Of 0</string>
    <string name="_0">0</string>
    <string name="loading">Loading...</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="register">Register</string>

</resources>